Fixed responsivness issue of tooltip on mobile devices

--- a/src/assets/sass/block/_media.scss
+++ b/src/assets/sass/block/_media.scss
@@ -93,5 +93,10 @@
 			font-size: 24px;
 			text-align: center;
 		}
+		
+		img {
+			bottom: 14px;
+			right: 30%;
+		}
 	}
 }
